src/objects/GraphicsPackSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>AttributionText__c</fullName>
        <label>Attribution Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributionURL__c</fullName>
        <label>Attribution URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>License2__c</fullName>
        <label>License2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LicenseURL__c</fullName>
        <label>License URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <picklist>
            <picklistValues>
                <fullName>16</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Graphics Pack Setting</label>
    <pluralLabel>Graphics Pack Settings</pluralLabel>
</CustomObject>